# FieldOpt-Benchmarks

./: .gitignore  README.md
ExhaustiveSearchHZ/CombinationSets/: CMakeLists.txt  main.cpp
ExhaustiveSearchHZ/CombinationSets/combinations/: n009-Z3.240E+03_cpp.cSet  runtimes
ExhaustiveSearchHZ/CombinationSets/combinations/fSets-cpp/: n003-Z4E+01_cpp.fSet  n009-Z3E+03_cpp.fSet
ExhaustiveSearchHZ/CombinationSets/combinations/fSets-matlab/: n009_mat.fSet  runtimes-Thinkpad-X1.txt  runtimes-bellout-Z9PE-D8-WS.txt
ExhaustiveSearchHZ/CombinationSets/matlab/: find_cSet_points_within_sample_grid.m  find_n_grid_points_vs_n_cells.m  find_poly_coeff_Z_vs_sz.m  print_MATLAB_sample_combinations.m
ExhaustiveSearchHZ/CombinationSets/src/: f_at_each_combination.h  f_at_each_combination_test.h  for_each_combination.h  for_each_permutation.h  permutation_string_writer.h  sample_point_ranges.cpp  sample_point_ranges.h  utilities.hpp
ExhaustiveSearchHZ/CombinationSets/tests/: test_combination_function.cpp  test_utilities.cpp
ExhaustiveSearchHZ/ComplementSets/: CMakeLists.txt  main.cpp
ExhaustiveSearchHZ/ComplementSets/complements/cSets-cpp/: B_n003-Z4E+01--A_n002-Z6E+00_cpp.cSet
ExhaustiveSearchHZ/ComplementSets/src/: combination_set.h
ExhaustiveSearchHZ/ComplementSets/tests/: test_complement_sets.cpp
WellIndexBenchmark/FieldOpt-old/: FieldOpt-old.pro  compile_standalone.sh  qmake.out
WellIndexBenchmark/FieldOpt-old/AdgprsResultsReader/: adgprs_results_reader.cpp  adgprs_results_reader.h  libadgprsresultsreader.so.1  libadgprsresultsreader.so.1.0.0
WellIndexBenchmark/FieldOpt-old/AdgprsSummaryConverter/: .gitignore
WellIndexBenchmark/FieldOpt-old/ERTWrapper/: eclgridreader.h  libertwrapper.so.1  libertwrapper.so.1.0.0
WellIndexBenchmark/FieldOpt-old/Model/: libmodel.so.1.0.0  model.cpp
WellIndexBenchmark/FieldOpt-old/Model/reservoir/: reservoir.cpp
WellIndexBenchmark/FieldOpt-old/Model/wells/: well.cpp  well.h
WellIndexBenchmark/FieldOpt-old/Optimization/: optimizer.cpp
WellIndexBenchmark/FieldOpt-old/Optimization/constraints/: combined_spline_length_interwell_distance.cpp
WellIndexBenchmark/FieldOpt-old/Runner/: FieldOpt  main.cpp
WellIndexBenchmark/FieldOpt-old/Runner/runners/: abstract_runner.cpp  abstract_runner.h
WellIndexBenchmark/FieldOpt-old/Simulation/execution_scripts/: execution_scripts.h
WellIndexBenchmark/FieldOpt-old/Simulation/results/: adgprsresults.cpp  adgprsresults.h  results.h
WellIndexBenchmark/FieldOpt-old/Simulation/simulator_interfaces/: adgprssimulator.cpp
WellIndexBenchmark/FieldOpt-old/Utilities/: libutilities.so.1.0  libutilities.so.1.0.0
WellIndexBenchmark/FieldOpt-old/Utilities/settings/: model.cpp  model.h  settings.cpp  simulator.cpp
WellIndexBenchmark/FieldOpt-old/WellIndexCalculator/: .gitignore  README.md  WellIndexCalculator.pro  libWellIndexCalculator.so.1  wellindexcalculator.cpp  wellindexcalculator.h
WellIndexBenchmark/FieldOpt-old/WellIndexCalculator/WellIndexCalculatorTests/: WellIndexCalculatorTests.pro  gtest_wic_main.cpp  test_geometryfunctions.cpp  test_intersected_cells.cpp  test_single_cell_wellindex.cpp  well_constraint_projections_tests.cpp
WellIndexBenchmark/FieldOpt-old/WellIndexCalculator/geometry_classes/: line.cpp  line.h  squareplane.cpp  squareplane.h
WellIndexBenchmark/FieldOpt-old/WellIndexCalculator/geometry_functions/: geometryfunctions.cpp  geometryfunctions.h
WellIndexBenchmark/FieldOpt-old/WellIndexCalculator/well_constraint_projections/: well_constraint_projections.cpp  well_constraint_projections.h
WellIndexBenchmark/FieldOpt-old/execution_scripts/: .gitignore
WellIndexBenchmark/WellIndexBenchmark/: .gitignore  WellIndexBenchmark  WellIndexBenchmark.pro  compile_WIC.sh  compile_WIC_bhome.sh  compile_WIC_bport.sh  documentation.txt  main.cpp  rms_wi_benchmark.pro
WellIndexBenchmark/WellIndexBenchmark/backup/wells-20170521/: run_WIC_bhome.sh
WellIndexBenchmark/WellIndexBenchmark/model/5spot/: ECL_5SPOT.ECLEND  ECL_5SPOT.INIT  ECL_5SPOT.INSPEC  ECL_5SPOT.RSSPEC  ECL_5SPOT.SMSPEC  ECL_5SPOT.UNRST  ECL_5SPOT.UNSMRY
WellIndexBenchmark/WellIndexBenchmark/model/norne/: NORNE_ATW2013.SMSPEC
WellIndexBenchmark/WellIndexBenchmark/rms/rms_wi_benchmark.pro/: project_lock_file
WellIndexBenchmark/WellIndexBenchmark/rms/rms_wi_benchmark_hm.pro/: project_lock_file
WellIndexBenchmark/WellIndexBenchmark/rms/rms_wi_benchmark_norne.pro/: dotrox.INI
WellIndexBenchmark/WellIndexBenchmark/src/: file_handling.cpp  file_handling.h  test_wells.cpp  test_wells.h  well_data_pcg.cpp  well_data_pcg.h  well_pcg.cpp  well_pcg.h  well_rms.cpp  well_rms.h
WellIndexBenchmark/WellIndexBenchmark/wells/: run_WIC_bport.sh
WellIndexBenchmark/WellIndexBenchmark/wells/python/: input_xyz_5spot.py  input_xyz_norne.py
WellIndexBenchmark/WellIndexBenchmark/wells/tw00_00/: EVENTS_tw00_00_RMS.DATA  input_xyz.py  readCOMPDAT.sh
WellIndexBenchmark/WellIndexBenchmark/wells/tw01_01/: EVENTS_tw01_01_PCG.DATA  EVENTS_tw01_01_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw02_01/: EVENTS_tw02_01_PCG.DATA  EVENTS_tw02_01_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw02_02/: EVENTS_tw02_02_PCG.DATA  EVENTS_tw02_02_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw03_01/: EVENTS_tw03_01_PCG.DATA  EVENTS_tw03_01_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw03_02/: EVENTS_tw03_02_PCG.DATA  EVENTS_tw03_02_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw03_03/: EVENTS_tw03_03_PCG.DATA  EVENTS_tw03_03_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw04_01/: EVENTS_tw04_01_PCG.DATA  EVENTS_tw04_01_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw04_02/: EVENTS_tw04_02_PCG.DATA  EVENTS_tw04_02_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw04_03/: EVENTS_tw04_03_PCG.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw04_04/: EVENTS_tw04_04_PCG.DATA  EVENTS_tw04_04_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/tw05_03/: EVENTS_tw05_03_RMS.DATA
WellIndexBenchmark/WellIndexBenchmark/wells/workflow/: NW01.txt  ROOT.dir  TW01.txt  (+2 more)
(+8 files in other folders)
